--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
 @import "/css/common.css";
 @import "/css/typo.css";
-@import "/css/_partials/media-query-md.css"
+@import "/css/_partials/media-query-md.css";
+@import "/css/_partials/media-query-lg.css";
