--- a/css/common.css
+++ b/css/common.css
@@ -34,3 +34,24 @@ main .main-top {
     background-color: var(--blue);
     padding-top: 2.5rem;
 }
+
+
+.custom-file-button {
+	input[type="file"] {
+		margin-left: -2px !important;
+
+		&::-webkit-file-upload-button {
+			display: none;
+		}
+		&::file-selector-button {
+			display: none;
+		}
+	}
+
+	&:hover {
+		label {
+			background-color: #dde0e3;
+			cursor: pointer;
+		}
+	}
+}
