feat: main top breadcrumb

--- a/css/common.css
+++ b/css/common.css
@@ -55,3 +55,9 @@ main .main-top {
 		}
 	}
 }
+
+
+
+.breadcrumb-item + .breadcrumb-item::before {
+    content: var(--bs-breadcrumb-divider, "");
+}
