--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @import "/css/common.css";
-@import "/css/typo.css";
+@import "/css/_partials/typo.css";
 @import "/css/_partials/variables.css";
 @import "/css/_partials/media-query-md.css";
 @import "/css/_partials/media-query-xl.css";
