feat: custom offcanvas width

--- a/css/_partials/media-query-xl.css
+++ b/css/_partials/media-query-xl.css
@@ -4,4 +4,10 @@
         max-width: 170px;
     }
 
-  }
+    :root {
+        --custom-offcanvas-width: 60%; /* Adjust the width as needed */
+      }
+
+    .offcanvas.offcanvas-end {
+        width: var(--custom-offcanvas-width);
+    }}
