feat: maion bottom table responsive

--- a/css/common.css
+++ b/css/common.css
@@ -67,8 +67,7 @@ main .main-top {
 }
 
 .button-size {
-    height: 50%;
-    
+    height: 50%; 
 }
 
 :root {
@@ -78,3 +77,6 @@ main .main-top {
 .offcanvas.offcanvas-end {
     width: var(--custom-offcanvas-width);
 }
+
+/* table */
+
