--- a/css/common.css
+++ b/css/common.css
@@ -26,6 +26,7 @@ main .right-container {
     height: calc(100vh - 70px);
     width: 100%;
     background-color: red;
+    overflow-y: auto;
 }
 
 /* main-top */
